# connect4

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: board.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: board.rs  column_index.rs  join_code.rs  lib.rs  protocol.rs
src/: board.rs
