[package]
name = "connect4-server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.102"
serde_json = "1.0.149"
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.1"
futures = "0.3.32"

